--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
+    <% include partials/head %>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+      <% include partials/navbar %>
+    <% include partials/body %>
+    <% include partials/footer %>
     <script type="text/javascript" src="/javascripts/jquery-3.3.1.slim.min.js"></script>
     <script type="text/javascript" src="/javascripts/popper.min.js"></script>
     <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
