--- a/views/partials/body.ejs
+++ b/views/partials/body.ejs
@@ -5,8 +5,10 @@
             <% break;
     
     case 'productos' : %>
-            <h1> Productos </h1>
-            <% include rec/productos %>
+            <div class="col-2">
+                <h1> Productos </h1>
+                <% include rec/productos %>
+            </div>
             <% break;
     
     default: %>
