--- a/views/partials/rec/productos.ejs
+++ b/views/partials/rec/productos.ejs
@@ -1,6 +1,6 @@
-<ul>
+<ul class="list-group">
 <% productos.forEach(function(producto) { %>
-    <li>
+    <li class="list-group-item">
         <%= producto.name %> - $ <%= producto.precio %> 
     </li>
 <% }); %>
