--- a/views/partials/rec/productos.ejs
+++ b/views/partials/rec/productos.ejs
@@ -1,7 +1,7 @@
 <ul class="list-group">
 <% productos.forEach(function(producto) { %>
     <li class="list-group-item">
-        <%= producto.name %> - $ <%= producto.precio %> 
+        <%= producto.name %> - $ <%= producto.cost %> 
     </li>
 <% }); %>
 </ul>
