--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,7 +6,7 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-          <% menus.forEach(function(menu) { %>
+          <% page.menus.forEach(function(menu) { %>
               <li class="nav-item active">
                   <a class="nav-link" href="<%= menu.address %>"><%= menu.name %></a>
               </li>
