--- a/views/partials/rec/productos.ejs
+++ b/views/partials/rec/productos.ejs
@@ -1,7 +1,2 @@
-<ul class="list-group">
-<% productos.forEach(function(producto) { %>
-    <li class="list-group-item">
-        <%= producto.name %> - $ <%= producto.cost %> 
-    </li>
-<% }); %>
-</ul>
+<a class="btn btn-primary btn-lg btn-block" href="./productos/listas" role="button">Lista</a>
+<a class="btn btn-primary btn-lg btn-block" href="./productos/agregar" role="button">Agregar</a>
